--- a/css/style.css
+++ b/css/style.css
@@ -337,22 +337,28 @@ span {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  width: 38px;
-  height: 38px;
+  width: 35px;
+  height: 35px;
   margin-right: 5px;
-  font-size: 23px;
+  font-size: 21px;
   border-radius: 50%;
-  color: #fff;
-  background-color: var(--other-color3);
-  margin-top: 5px;
+  color: var(--text-color);
+  background-color: var(--main-color);
+  margin-top: 6px;
+  transition: 0.3s;
+}
+.projects .row i:hover{
+  color: var(--main-color);
+  background-color: var(--text-color);
 }
 .created-by{
   display: flex;
   /* justify-content: center; */
 }
 .created-by img {
-width: 24px;
-margin-right: 4px;
+width: 25px;
+margin-right: 5px;
+border-radius: 0%;
 }
 
 /* end projects */
