--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* Start Variables */
+/* Variables */
 :root {
   --text-color: #fff;
   --bg-color: #1b1f24;
@@ -12,7 +12,6 @@
   --h2-font: 2.9rem;
   --p-font: 1rem;
 }
-/* End Variables */
 
 /* Website theme light/Dark */
 .theme-btn {
@@ -37,7 +36,6 @@
 .light-theme {
   --text-color: #1b1f24;
   --bg-color: #fff;
-  /* --secound-bg-color: #fff; */
   --secound-bg-color: #f5f5f5;
   --main-color: #3e92cc;
   --other-color1: #262626;
@@ -63,7 +61,7 @@
   background-color: var(--text-color);
   border-radius: 2px;
 }
-/* Start Global Rules */
+/* Global Rules */
 * {
   padding: 0;
   margin: 0;
@@ -79,7 +77,6 @@ body {
   background-color: var(--bg-color);
   /* font-family: sans-serif; */
 }
-/* End Global Rules */
 
 /* start header */
 header {
