--- a/css/style.css
+++ b/css/style.css
@@ -276,6 +276,9 @@ span {
   margin-bottom: 15px;
   transition: 0.3s ease-in-out;
 }
+.box img:nth-child(4) {
+  height: 200px;;
+}
 .box p {
   font-size: var(--p-font);
   font-weight: 400;
