--- a/css/style.css
+++ b/css/style.css
@@ -137,12 +137,14 @@ section {
   background-color: var(--bg-color);
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  text-align: center;
+  gap: 4rem;
   /* overflow: hidden; */
   /* justify-content: space-between; */
 }
 .hero .main-content h4 {
-  font-size: 1.6rem;
+  font-size: 2.5rem;
 }
 .hero .main-content h1 {
   font-size: var(--h1-font);
@@ -150,21 +152,18 @@ section {
   margin: 20px 0;
   line-height: 1.2;
 }
-/* .hero-img img {
-  width: 600px;
-  margin-bottom: -55px;
-} */
 span {
   color: var(--main-color);
 }
 .hero .main-content p {
-  font-size: var(--p-font);
+  font-size: 18px;
   font-weight: 400;
-  width: 580px;
+  text-align: center;
+  width: 700px;
   max-width: 100%;
   line-height: 30px;
   color: var(--other-color1);
-  margin-bottom: 15px;
+  margin-bottom: 25px;
 }
 .hero .main-content .social {
   margin-bottom: 40px;
@@ -486,7 +485,7 @@ form .send-btn:hover {
     padding: 18px 5%;
   }
   .hero {
-    height: 85vh;
+    height: 100vh;
     background-position: center;
   }
 }
@@ -528,6 +527,7 @@ form .send-btn:hover {
 
   .main-content p {
     width: 70% !important;
+    margin: 0 auto;
   }
   :root {
     --h1-font: 3rem;
@@ -614,7 +614,7 @@ form .send-btn:hover {
    padding-bottom: 60px;
   }
   .hero {
-    padding: 335px 5% 320px;
+    padding: 335px 3% 320px;
   }
   .theme-btn{
     width: 35px;
